// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer renders a spinner when fetching quotes 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 20,
      "flexDirection": "row",
      "marginBottom": 8,
      "paddingHorizontal": 15,
      "paddingVertical": 4,
    }
  }
>
  <ActivityIndicator
    size="small"
  />
  <Text
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 30,
          "fontWeight": "400",
          "marginVertical": 2,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
     
    Fetching new quotes...
  </Text>
</View>
`;

exports[`Timer renders the expiration label once there are no cycles left 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 20,
      "flexDirection": "row",
      "marginBottom": 8,
      "paddingHorizontal": 15,
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 30,
          "fontWeight": "400",
          "marginVertical": 2,
        },
        {
          "textAlign": "center",
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#121314",
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Quotes expire in
     
    <Text
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "CentraNo1-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#121314",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontVariant": [
                "tabular-nums",
              ],
            },
            {
              "color": "#ca3542",
            },
          ],
        ]
      }
    >
      0:03
    </Text>
  </Text>
</View>
`;

exports[`Timer renders the remaining-time label while cycles are left 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 20,
      "flexDirection": "row",
      "marginBottom": 8,
      "paddingHorizontal": 15,
      "paddingVertical": 4,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 30,
          "fontWeight": "400",
          "marginVertical": 2,
        },
        {
          "textAlign": "center",
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        {
          "color": "#121314",
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    New quotes in
     
    <Text
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "CentraNo1-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#121314",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontVariant": [
                "tabular-nums",
              ],
            },
            false,
          ],
        ]
      }
    >
      0:20
    </Text>
  </Text>
</View>
`;
